bins/havenc/tests/cases/fail/test_enum_struct_variant_badbind.hv
//@ error: has no field `nope`
// destructuring a struct variant by a field name it doesn't have is rejected.
enum Msg { Stop, Cc { id: u32, val: i32 } }

@export
proc main() i32 {
    let m: Msg = Msg::Cc { id: 5u32, val: 10 };
    match (m) {
        Msg::Cc { id, nope } -> { return numerical_cast::<i32>(id); }
        Msg::Stop            -> { return 0; }
    }
}
